feat(judge): add remaining rest endpoints
